Fixed bug with jumping screen when we scrolled down

--- a/src/components/functionsBar/FunctionsBar.css
+++ b/src/components/functionsBar/FunctionsBar.css
@@ -9,6 +9,7 @@
 
 
 .functionsBar-container {
+    padding-top: 60px;
     background-color: var(--main-bg-color);
 }
 
